adding new styles for job list admin view

--- a/src/sass/crn_app/_admin.admin.scss
+++ b/src/sass/crn_app/_admin.admin.scss
@@ -53,7 +53,35 @@
             padding: 10px 15px;
             margin: 0 -15px;
         }
-    }
+
+        .dashboard-dataset-teasers.admin-jobs {
+            .panel-group {
+                margin-bottom: 0;
+            }
+
+            .panel {
+                    background: transparent;
+                    .panel-heading {
+                        @extend .row;
+                        background: $f8;
+                    }
+                    .panel-collapse {
+                        @extend .row;
+                        .job-col {
+                            border-right: 1px solid $ddd;
+                            border-bottom: 1px solid $ddd;
+                            min-height: 20px;
+                            > label,
+                            > div {
+                                display: block;
+                                padding: 10px;
+                                font-size: 16px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
 
     .add-user {
         padding-left: 0;
@@ -150,4 +178,15 @@
             }
         }
     }
+
+
+}
+.admin-job-parameters .Select.Select--single {
+    width: 20%;
+    margin: 10px 0;
+    display: inline-block;
+    margin-bottom: 0;
+    vertical-align: middle;
+    padding: 0px;
+    line-height: 30px;
 }
