--- a/src/sass/crn_app/_admin.admin.scss
+++ b/src/sass/crn_app/_admin.admin.scss
@@ -74,7 +74,7 @@
                             > label,
                             > div {
                                 display: block;
-                                padding: 10px;
+                                padding: 10px 5px;
                                 font-size: 16px;
                             }
                         }
