moving panel inner to panel body

--- a/src/sass/crn_app/_dataset.jobs.scss
+++ b/src/sass/crn_app/_dataset.jobs.scss
@@ -98,7 +98,7 @@
                         text-transform: none;
                     }
                 }
-
+                .succeeded .badge,
                 .finished .badge {
                     color: $brand-success;
                 }
