updating model display for for disclaimer terms

--- a/src/sass/crn_app/_upload.upload.scss
+++ b/src/sass/crn_app/_upload.upload.scss
@@ -33,8 +33,13 @@
 
             &:hover {color: $primary-hover;}
         }
-    }
 
+    }
+    .disclaimer{
+        padding: 20px;
+        display: block;
+        font-size: 15px;
+    }
 
     .dir-name {
         text-align: center;
