making app label clickable at 100% of width

--- a/src/sass/crn_app/_admin.admin.scss
+++ b/src/sass/crn_app/_admin.admin.scss
@@ -64,6 +64,9 @@
                     .panel-heading {
                         @extend .row;
                         background: $f8;
+                        a{
+                            width: 100%;
+                        }
                     }
                     .panel-collapse {
                         @extend .row;
