--- a/src/sass/crn_app/_dataset.jobs.scss
+++ b/src/sass/crn_app/_dataset.jobs.scss
@@ -278,6 +278,7 @@
                         padding: 5px 0;
                         .value span {
                             padding-left: 5px;
+                            display: inline-block;
                         }
                         &:last-child {
                             border-bottom: 1px solid $eee;
