--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -49,6 +49,7 @@
 @import './crn_app/upload.upload';
 @import './crn_app/upload.validation';
 @import './crn_app/admin.tools';
+@import './crn_app/faq';
 
 
 
