--- a/src/sass/crn_app/_dataset.jobs.scss
+++ b/src/sass/crn_app/_dataset.jobs.scss
@@ -62,6 +62,10 @@
                 }
             }
 
+            .job-log {
+                display: block;
+            }
+
             .panel-heading {
                 padding: 0;
                 background: none;
