adding some classes for exit codes

--- a/src/sass/crn_app/_dataset.jobs.scss
+++ b/src/sass/crn_app/_dataset.jobs.scss
@@ -64,6 +64,14 @@
 
             .job-log {
                 display: block;
+
+                .exit-code {
+                    font-size: 12px;
+                }
+
+                .fail {
+                    color: $brand-danger
+                }
             }
 
             .panel-heading {
