--- a/src/sass/crn_app/_frontPage.scss
+++ b/src/sass/crn_app/_frontPage.scss
@@ -402,6 +402,10 @@
                     position: relative;
                 }
 
+                .select-pipeline option {
+                    color: black;
+                }
+
                 .select-pipeline-arrow{
                     border-color: $white rgba(0, 0, 0, 0) rgba(0, 0, 0, 0);
                     border-style: solid;
