Fix filetree fonts for files and directories.

--- a/src/sass/crn_app/_dataset.file-tree.scss
+++ b/src/sass/crn_app/_dataset.file-tree.scss
@@ -60,6 +60,8 @@
             .panel-body {
                 border-top: 1px solid transparent;
                 color: $c-56;
+                font-family: 'Cabin', sans-serif;
+                font-size: 11px;
 
                 >ul {
                     overflow: visible;
