display individual job statuses during analysis running

--- a/src/sass/crn_app/_dataset.jobs.scss
+++ b/src/sass/crn_app/_dataset.jobs.scss
@@ -139,6 +139,11 @@
                     margin: 0px;
                 }
             }
+
+            .job-status {
+                border-bottom: 1px solid $ccc;
+            }
+
             .results {
                 margin: 0;
 
