--- a/src/sass/crn_app/_dataset.jobs.scss
+++ b/src/sass/crn_app/_dataset.jobs.scss
@@ -62,6 +62,11 @@
                 }
             }
 
+            .cancel-job {
+                float: right;
+                font-size: 12px;
+            }
+
             .job-log {
                 display: block;
 
