adding required checkbox to app definition modal

--- a/src/sass/crn_app/_admin.admin.scss
+++ b/src/sass/crn_app/_admin.admin.scss
@@ -193,3 +193,9 @@
     padding: 0px;
     line-height: 30px;
 }
+
+.admin-job-parameters .required-button {
+    border: none;
+    background-color: transparent;
+    padding-top: 0;
+}
