--- a/app/src/sass/main.scss
+++ b/app/src/sass/main.scss
@@ -234,6 +234,7 @@
     }
 }
 
+/* fixes for modals */
 
 div.form-inline > span {
     div:nth-child(4) {
@@ -245,6 +246,32 @@ div.form-inline > span {
     }
     div:nth-child(5) {
         width: 25% !important;
+    }
+}
+
+div.input-group {
+
+    div.clearfix {            
+        width: 99%;
+        display: flex;
+        .Select--multi {
+            width: 75%;
+        }
+
+        input[type='checkbox']{
+            width: 2em;
+            border: none;
+            box-shadow: none;
+        }
+
+        input[type='checkbox']:focus {
+            outline: none;
+        }
+
+        span.help-text {
+            background: transparent;
+            border: none !important;
+        }
     }
 }
 
