Add scss back into the webpack build.

--- a/app/src/sass/main.scss
+++ b/app/src/sass/main.scss
@@ -1,3 +1,4 @@
+$bootstrap-sass-asset-helper: true;
 //base ====================================================================
 @import 'bootstrap';
 // Always required /_properties if not importing all animate/animate.scss
