update css and dry/clean up code for hidden params update

--- a/app/src/sass/crn_app/_admin.admin.scss
+++ b/app/src/sass/crn_app/_admin.admin.scss
@@ -194,7 +194,7 @@
     line-height: 30px;
 }
 
-.admin-job-parameters .required-button {
+.admin-job-parameters .admin-button {
     border: none;
     background-color: transparent;
     padding-top: 0;
