add color coding to jobs within dashboards

--- a/app/src/sass/crn_app/_dashboard.datasets.scss
+++ b/app/src/sass/crn_app/_dashboard.datasets.scss
@@ -253,6 +253,21 @@
                 &:hover {
                     color: $primary-hover;
                 }
+
+
+            }
+            
+            #UPLOADING {
+                background-color: rgba(0, 124, 147, .1);
+            }
+
+            #REJECTED,
+            #FAILED {
+                background-color: rgba(140, 21, 21, .1);
+            }
+
+            #SUCCESS {
+                background-color: rgba(123, 196, 123, .1);
             }
 
             .status-container {
