debug and update sorting for analyses and datasets (public and private)

--- a/app/src/sass/crn_app/_dashboard.datasets.scss
+++ b/app/src/sass/crn_app/_dashboard.datasets.scss
@@ -131,7 +131,7 @@
     }
 
     .sort {
-        width: 230px;
+        // width: 230px;
         float: left;
         padding: 0;
         margin: 0;
