fix bug #65 in regards to required and hide buttons

--- a/app/src/sass/crn_app/_admin.admin.scss
+++ b/app/src/sass/crn_app/_admin.admin.scss
@@ -194,7 +194,9 @@
     line-height: 30px;
 }
 
-.admin-job-parameters .admin-button {
+.admin-job-parameters .admin-button,
+.required-button, 
+.hide-button {
     border: none;
     background-color: transparent;
     padding-top: 0;
