update color for support

--- a/app/src/sass/crn_app/_dataset.jobs.scss
+++ b/app/src/sass/crn_app/_dataset.jobs.scss
@@ -58,7 +58,7 @@
                 }
                 
                 #support {
-                    color: #337ab7;
+                    color: #008599;
                 }
             }
         }
