--- a/app/src/sass/crn_app/_dataset.jobs.scss
+++ b/app/src/sass/crn_app/_dataset.jobs.scss
@@ -48,17 +48,17 @@
             }
 
             .app-descriptions {
-                padding: 1em;
-                padding-top: 0;
                 font-size: 12px;
                 color: #666;
 
                 label{
                     color: #9e9e9e;
                 }
-                
-                #support {
-                    color: #008599;
+                span {
+                    margin-left: 1px;
+                    p {
+                        display: inherit;
+                    }
                 }
             }
         }
