fix for issue #92: Long dataset titles are not wrapped

--- a/app/src/sass/crn_app/_dataset.file-tree.scss
+++ b/app/src/sass/crn_app/_dataset.file-tree.scss
@@ -74,10 +74,15 @@
                         list-style: none;
                         margin: 2px;
 
+                        span.item-name > * {
+                            white-space: normal;
+                        }
+
                         .btn-file-folder {
                             color: $c-66;
                             width: 100%;
                             text-align: left;
+
                         }
 
                         .child-files {
