--- a/app/src/sass/main.scss
+++ b/app/src/sass/main.scss
@@ -45,14 +45,13 @@ $bootstrap-sass-asset-helper: true;
 @import './crn_app/dataset.file-tree';
 @import './crn_app/dataset.sidebar';
 @import './crn_app/admin.admin';
+@import './crn_app/admin.progression';
 @import './crn_app/frontPage';
 @import './crn_app/dashboard.datasets';
 @import './crn_app/upload.upload';
 @import './crn_app/upload.validation';
 @import './crn_app/admin.tools';
 @import './crn_app/faq';
-
-
 
 
 .logo-text{
