Negate uppercase and bolding of checkbox labels for job runs. Fixes #118.

--- a/app/src/sass/crn_app/_common.modals.scss
+++ b/app/src/sass/crn_app/_common.modals.scss
@@ -144,6 +144,9 @@
         span {
             padding-left: 8px;
         }
+
+        text-transform: none;
+        font-weight: normal;
     }
 
 }
