--- a/app/src/sass/crn_app/_nav.navbar.scss
+++ b/app/src/sass/crn_app/_nav.navbar.scss
@@ -118,10 +118,35 @@
                 }
             }
 
-            .sign-in-nav-btn {
-                margin: 15px 20px;
+            .login-nav-right {
+                cursor: pointer;
+                margin-right: 25px;
                 @media(max-width: 767px){
                     margin: 0;
+                }
+
+                span.arrow {
+                    display: inline-block;
+                    vertical-align: middle;
+                    width: 0;
+                    height: 0;
+                    border-style: solid;
+                    border-width: 6px 5px 0 5px;
+                    border-color: rgba(250,250,250, 0.3) transparent transparent transparent;
+                  }
+
+                .dropdown-login {
+                  background: $c-33;
+                  overflow: hidden;
+                  position: absolute;
+                  width: 200px;
+                  z-index: 1;
+                  top: 70px;
+                  padding-bottom: 10px;
+                  button {
+                    display: block;
+                    margin: 5px;
+                  }
                 }
             }
 
@@ -439,9 +464,3 @@
         }
     }
 }
-
-
-
-
-
-
