--- a/app/src/sass/crn_app/_nav.navbar.scss
+++ b/app/src/sass/crn_app/_nav.navbar.scss
@@ -117,6 +117,10 @@
                     // font-size: 21px;
                 }
             }
+            
+            .active-singing {
+              margin: 15px 20px;
+            }
 
             .login-nav-right {
                 cursor: pointer;
