--- a/app/src/sass/crn_app/_nav.navbar.scss
+++ b/app/src/sass/crn_app/_nav.navbar.scss
@@ -118,7 +118,7 @@
                 }
             }
             
-            .active-singing {
+            .active-signin {
               margin: 15px 20px;
             }
 
