--- a/app/src/sass/crn_app/_nav.navbar.scss
+++ b/app/src/sass/crn_app/_nav.navbar.scss
@@ -143,13 +143,15 @@
                   background: $c-33;
                   overflow: hidden;
                   position: absolute;
-                  width: 200px;
+                  width: 180px;
                   z-index: 1;
                   top: 70px;
-                  padding-bottom: 10px;
+                  padding: 10px;
+                  right: 0px;
                   button {
                     display: block;
                     margin: 5px;
+                    width: 84%;
                   }
                 }
             }
