--- a/app/src/sass/bootstrap/_navs.scss
+++ b/app/src/sass/bootstrap/_navs.scss
@@ -20,6 +20,7 @@
       position: relative;
       display: block;
       padding: $nav-link-padding;
+      font-weight: 400;
       &:hover,
       &:focus {
         text-decoration: none;
