Remove drop down buttons from selects for browsers and replace with 'fake' react-select arrow-zone to selects.  Note: scroll bar is not removable within mozilla, tried numerous work arounds

--- a/app/src/sass/crn_app/_common.modals.scss
+++ b/app/src/sass/crn_app/_common.modals.scss
@@ -296,9 +296,16 @@
     .task-select {
         border: 1px solid $ccc;
         padding: 0;
-
         select {
             border: 0;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+        }
+        .m-arrow {
+          position: absolute;
+          top: 30%;
+          right: 0;
         }
     }
 
@@ -452,6 +459,3 @@
         content: ' \f0dd';
     }
 }
-
-
-
