--- a/app/src/sass/crn_app/_nav.navbar.scss
+++ b/app/src/sass/crn_app/_nav.navbar.scss
@@ -438,7 +438,7 @@
 .navbar-brand {
     height: 75px;
     padding: 5px 20px;
-    border: none;
+    border: 0;
 
     @media(max-width: 1000px){
         padding: 15px 25px;
