--- a/app/src/sass/crn_app/_dataset.jobs.scss
+++ b/app/src/sass/crn_app/_dataset.jobs.scss
@@ -146,6 +146,12 @@
                 margin: -15px;
                 display: block;
             }
+
+            .panel-body {
+              padding-bottom: 7px;
+              -webkit-padding-after: 15px;
+            }
+
             .file-structure.panel-group .panel-default .panel-collapse .panel-body > ul {
                 height: auto;
             }
