--- a/app/src/sass/crn_app/_nav.navbar.scss
+++ b/app/src/sass/crn_app/_nav.navbar.scss
@@ -117,51 +117,18 @@
                     // font-size: 21px;
                 }
             }
-            
-            .active-signin {
-              margin: 15px 20px;
-            }
 
-            .login-nav-right {
-                cursor: pointer;
-                margin-right: 25px;
+            .sign-in-nav-btn {
+                margin: 0px 20px;
                 @media(max-width: 767px){
-                    margin: 0;
+                  margin: 0;
                 }
-
-                span.arrow {
-                    display: inline-block;
-                    vertical-align: middle;
-                    width: 0;
-                    height: 0;
-                    border-style: solid;
-                    border-width: 6px 5px 0 5px;
-                    border-color: rgba(250,250,250, 0.3) transparent transparent transparent;
-                  }
-
-                .dropdown-login {
-                  background: $white;
-                  overflow: hidden;
-                  position: absolute;
-                  width: 180px;
-                  z-index: 1;
-                  top: 70px;
-                  padding: 10px;
-                  right: 0;
-                  left: auto;
-                  border-radius: 0;
-                  box-shadow: 1px 2px 4px -3px $transparent7;
-                  border-color: $f4;
-                  button {
-                    display: block;
-                    margin: 5px;
-                    width: 84%;
-                  }
-                  hr {
-                    margin: 0;
-                  }
+                .link-name {
+                  border-bottom: none;
                 }
-            }
+              }
+
+
 
             .user-wrap {
                 margin: 0;
