--- a/app/src/sass/crn_app/_dataset.dataset.scss
+++ b/app/src/sass/crn_app/_dataset.dataset.scss
@@ -3,7 +3,7 @@
 
     .dataset-inner {
         padding-top: 60px;
-
+        margin-bottom: 15%;
         h1 {
             margin-top: 0;
             label {
@@ -82,7 +82,7 @@
                         top: 3px;
                     }
                 }
-            
+
                 .file-name-link {
                     i {
                         font-size: 13px;
@@ -93,5 +93,3 @@
 
     }
 }
-
-
