--- a/app/src/sass/crn_app/_common.modals.scss
+++ b/app/src/sass/crn_app/_common.modals.scss
@@ -293,14 +293,38 @@
 
 .analysis-modal {
 
-    .task-select {
-        border: 1px solid $ccc;
-        padding: 0;
-
-        select {
-            border: 0;
-        }
+  .task-select {
+    border: 1px solid $ccc;
+    padding: 0;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    select {
+      border: 0;
+      -webkit-appearance: none;
+      -moz-appearance: none;
     }
+    select ::-ms-expand {
+      display: none;
+    }
+
+    .Select-arrow-zone {
+      position: absolute;
+      display: unset;
+      right: 0px;
+      top: 10px;
+      border: 0;
+      box-shadow: none;
+      z-index: 15;
+      -moz-padding-start: 10px;
+      -moz-padding-end: 10px;
+      .arrow {
+        width: 50%;
+      }
+    }
+  }
+
 
     .default-reset {
         padding: 10px;
