replace reactable with react-table for .tsv / .csv viewing component

--- a/app/src/sass/main.scss
+++ b/app/src/sass/main.scss
@@ -25,6 +25,9 @@ $bootstrap-sass-asset-helper: true;
 // react-select
 @import './react-select';
 
+// react-table
+@import './react-table';
+
 //component common
 @import './crn_app/common.spinner';
 @import './crn_app/common.pagination';
