--- a/app/src/sass/crn_app/_common.modals.scss
+++ b/app/src/sass/crn_app/_common.modals.scss
@@ -471,6 +471,50 @@
     }
 }
 
+div.rt-resizable-header-content {
+    color: $primary;
+    padding: 5px 0px;
+    padding-right: 50px !important;
+    text-align: left;
+}
+
+.rt-th {
+    .rt-resizable-header-content::after {
+      font-family: FontAwesome;
+        content: ' \f0dc';
+        position: absolute;
+        width: 50px; 
+        padding-left: 5px !important; 
+        padding-top: 2px;
+    }
+}
+
+.rt-th.-sort-desc {
+    box-shadow: none !important;
+
+    .rt-resizable-header-content::after {
+      font-family: FontAwesome;
+        content: ' \f0dd';
+        position: absolute;
+        width: 50px;
+        padding-left: 5px !important;  
+        padding-top: 2px;
+    }
+}
+
+.rt-th.-sort-asc {
+    box-shadow: none !important;
+
+    .rt-resizable-header-content::after {
+      font-family: FontAwesome;
+        content: ' \f0de';
+        position: absolute;
+        width: 50px;
+        padding-left: 5px !important;  
+        padding-top: 2px;
+    }
+}
+
 .reactable-header-sortable {
     color: $primary;
     padding-right: 50px !important;
