--- a/app/src/sass/crn_app/_common.modals.scss
+++ b/app/src/sass/crn_app/_common.modals.scss
@@ -1,4 +1,10 @@
 
+// form input for add app 
+
+body > div:nth-child(9) > div.fade.in.modal > div > div > div.modal-body > div > div.form-group.admin-job-parameters > div > div.form-inline > div > span > div:nth-child(4) > span > li {
+    list-style: none;
+}
+
 // modal form elements
 .parameters {
     margin-top: 10px;
@@ -189,7 +195,6 @@
         background: transparentize($white, .2);
         height: 100%;
         padding: 80px 0 0;
-
         .modal-content {
             background: $transparent;
             height: 100%;
@@ -207,7 +212,6 @@
                         height: auto;
                     }
                 }
-
             }
 
             .modal-header {
