--- a/app/src/sass/crn_app/_common.modals.scss
+++ b/app/src/sass/crn_app/_common.modals.scss
@@ -208,6 +208,24 @@
                     }
                 }
 
+                .json-editor {
+
+                    textarea {
+                        min-height: 500px;
+                        resize: vertical;
+                    }
+
+                    .json-editor-controls {
+                        span {
+                            padding-right: 15px;
+                            
+                            i {
+                                padding-right: 3px;
+                            }
+                        }
+                    }
+
+                }
             }
 
             .modal-header {
