update input type checkbox to match style and app logic.

--- a/app/src/sass/crn_app/_common.click-to-edit.scss
+++ b/app/src/sass/crn_app/_common.click-to-edit.scss
@@ -137,11 +137,18 @@
     li {
         list-style: none;
     }
-    #hidden-btn {
+    .admin-button {
         position: relative;
+    }
+    #hidden-btn {
         float: right;
         bottom: 20px;
         right: 65px;
+    }
+    #default-btn {
+        float: right;
+        left: 56px;
+        bottom: 4px;
     }
     .form-inline {
         .form-group {
