basic styling for comments

--- a/app/src/sass/main.scss
+++ b/app/src/sass/main.scss
@@ -47,6 +47,7 @@ $bootstrap-sass-asset-helper: true;
 @import './crn_app/dataset.tools';
 @import './crn_app/dataset.file-tree';
 @import './crn_app/dataset.sidebar';
+@import './crn_app/dataset.comments';
 @import './crn_app/admin.admin';
 @import './crn_app/frontPage';
 @import './crn_app/dashboard.datasets';
