Add stylings for the editor and the syntax highlighting

--- a/app/src/sass/crn_app/_dataset.comments.scss
+++ b/app/src/sass/crn_app/_dataset.comments.scss
@@ -21,7 +21,9 @@
 }
 
 .comment-submit {
-    margin: 0px 10px;
+    width: 100%;
+    background-color: $ocean;
+    color: white;
 }
 
 .comments {
