--- a/app/src/sass/main.scss
+++ b/app/src/sass/main.scss
@@ -7,6 +7,11 @@ $bootstrap-sass-asset-helper: true;
 //font  //=================================================================
 @import './font-awesome/font-awesome';
 
+// draft.js
+@import './draft/draft';
+@import './draft/rich-editor';
+@import '../../node_modules/prismjs/themes/prism-coy';
+
 // papaya asset default
 @import './crn_app/_common.papaya';
 
