--- a/app/src/sass/draft/rich-editor.scss
+++ b/app/src/sass/draft/rich-editor.scss
@@ -6,7 +6,7 @@
   }
   
   .RichEditor-editor {
-    border-top: 1px solid #ddd;
+    // border-top: 1px solid #ddd;
     cursor: text;
     font-size: 16px;
     margin-top: 10px;
