--- a/app/src/sass/crn_app/_dashboard.datasets.scss
+++ b/app/src/sass/crn_app/_dashboard.datasets.scss
@@ -417,3 +417,23 @@
         }
     }
 }
+
+// Resolve bootstrap/google custom search conflicts
+
+.gsc-control-cse .gsc-table-result {
+	font-family : inherit;
+}
+
+.gsc-control-cse .gsc-input-box {
+	height : inherit;
+}
+
+input.gsc-input,
+.gsc-input-box,
+.gsc-input-box-hover,
+.gsc-input-box-focus,
+.gsc-search-button, input.gsc-search-button-v2 {
+	box-sizing  : content-box;
+	line-height : normal;
+	margin-top  : 0px;
+}
