create icons for comment actions

--- a/app/src/sass/crn_app/_dataset.comments.scss
+++ b/app/src/sass/crn_app/_dataset.comments.scss
@@ -24,6 +24,10 @@
       background-color: inherit !important;
     }
   }
+  i.fa {
+    font-family: "FontAwesome";
+    padding-right: 2px;
+  }
 }
 
 /*Comment Tree*/
