--- a/app/src/sass/crn_app/_dataset.comments.scss
+++ b/app/src/sass/crn_app/_dataset.comments.scss
@@ -12,10 +12,23 @@
     border-left: 5px solid $ocean;
   }
   .comment-header {
-    font-size: 18px;
-    color: $c-42;
-    line-height: 10px;
-    padding: 0;
+    label {
+      font-size: 18px;
+      color: $c-42;
+      line-height: 10px;
+      padding: 0;
+    }
+    div {
+      margin-bottom: 15px;
+      span {
+        float: right;
+        select {
+          width: 160px;
+          font-size: 13px;
+          height: 25px;
+        }
+      }
+    }
   }
   pre {
     background-color: $eee !important;
@@ -24,7 +37,7 @@
       background-color: inherit !important;
     }
   }
-  i.fa {
+  i {
     font-family: "FontAwesome";
     padding-right: 2px;
   }
@@ -34,10 +47,9 @@
 
 .comment-tree {
   margin-left: 20px;
-  padding: 5px;
-  .parent-comment {
-    margin-left: 0px;
-  }
+  padding-left: 15px;
+  border-left: solid 1px $ccc;
+
   .comment-box,
   .comment-text {
     padding: 20px;
@@ -73,16 +85,22 @@
     .comment-actions {
       text-align: right;
       padding-right: 20px;
+      font-size: 12px;
       a {
         text-transform: uppercase;
-        font-size: 12px;
         color: $ocean;
         &:hover {
           color: $sky;
         }
       }
+      .toggle-replies {
+        width: 65%;
+        display: inline-block;
+        text-align: left;
+      }
       .reply-div {
         border: solid 1px $ddd;
+        margin: 0px;
         margin-top: 10px;
         padding: 15px;
         button {
@@ -96,6 +114,12 @@
 .comment-input {
   width: 80%;
 }
+
+.parent-comment {
+  margin-left: 0px;
+  border-left: none;
+}
+
 
 /*Editor Block*/
 
