some work on the comment-created email template

--- a/server/libs/email/templates/comment-created.html
+++ b/server/libs/email/templates/comment-created.html
@@ -42,7 +42,7 @@
 		<h2>Hi, {{firstName}} {{lastName}}</h3>
 
 		<p>
-			Dataset <b>{{datasetName}}</b> has been shared with you.
+			Dataset <b>{{datasetName}}</b> has been commented on.
 		</p>
 
 		<p>
