--- a/app/src/sass/draft/rich-editor.scss
+++ b/app/src/sass/draft/rich-editor.scss
@@ -2,7 +2,7 @@
     background: #fff;
     font-family: 'Georgia', serif;
     font-size: 14px;
-    padding: 15px;
+    padding-bottom:10px;
   }
   
   .RichEditor-editor {
@@ -16,10 +16,6 @@
   .RichEditor-editor .public-DraftEditor-content {
     margin: 0 -15px -15px;
     padding: 15px;
-  }
-  
-  .RichEditor-editor .public-DraftEditor-content {
-    min-height: 100px;
   }
   
   .RichEditor-hidePlaceholder .public-DraftEditorPlaceholder-root {
@@ -51,6 +47,7 @@
     font-size: 14px;
     margin-bottom: 5px;
     user-select: none;
+    text-align:left;
   }
   
   .RichEditor-styleButton {
