--- a/app/src/sass/crn_app/_dashboard.datasets.scss
+++ b/app/src/sass/crn_app/_dashboard.datasets.scss
@@ -418,22 +418,11 @@
     }
 }
 
-// Resolve bootstrap/google custom search conflicts
-
-.gsc-control-cse .gsc-table-result {
-	font-family : inherit;
-}
-
-.gsc-control-cse .gsc-input-box {
-	height : inherit;
-}
-
-input.gsc-input,
-.gsc-input-box,
-.gsc-input-box-hover,
-.gsc-input-box-focus,
-.gsc-search-button, input.gsc-search-button-v2 {
-	box-sizing  : content-box;
-	line-height : normal;
-	margin-top  : 0px;
+.search-group {
+    float: right;
+    padding: 0px 20px;
+    .btn-blue {
+        padding: 10px 13px;
+        width: auto;
+    }
 }
