on dataset deleted, send notification email

--- a/server/libs/email/templates/owner-unsubscribed.html
+++ b/server/libs/email/templates/owner-unsubscribed.html
@@ -42,7 +42,7 @@
 		<h2>Hi, {{firstName}} {{lastName}}</h3>
 
 		<p>
-			A dataset you follow, <b>{{datasetName}}</b>, has been deleted. You will no longer receive notifications about this dataset.
+			The owner of a dataset you follow, <b>{{datasetName}}</b>, has stopped tracking comments / changes to their dataset.
 		</p>
 
 		<p>
